--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -2,33 +2,67 @@
 @import "layout/_header";
 
 body {
-margin: 0;
+  margin: 0;
 }
 
 .header__title {
-display: flex;
-flex-direction: row;
-justify-content: center;
-display: flex;
-flex-direction: column;
-justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 
-.page__main {
-display: flex;
-flex-direction: row;
-padding-top: 20px;
+.main__page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 20px;
 }
 
+.main__form {
+    display: flex;
+    justify-content: center;
+}
 .input {
-margin: 16px;
+  margin: 16px;
 }
 
 .btn {
-width: 150px;
-padding: 4px;
-margin-left: 12px;
-font-size: 16px;
-border: solid 1px;
-border-radius: 12px;
+  width: 150px;
+  height: 30px;
+  padding: 4px;
+  margin-left: 20px;
+  font-size: 16px;
+  border: solid 1px;
+  border-radius: 10px;
+}
+
+.main__results {
+  margin: 0;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+}
+
+.cards {
+  margin: 100px 15px;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.cards__list {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 10px;
+}
+.hidden {
+  display: none;
+}
+.cards__image-adalab {
+  border-radius: 4px;
+}
+.cards__pokemon {
+  width: 160px;
+  height: 195px;
+  background-color: white;
+  border-radius: 4px;
 }
