--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,22 +1,36 @@
-<main class="main__page">
-    <form action="" class="form__app">
-        <div>
-            <label for="four__cards" class="four__cards">
-                <input type="radio" class="input" id="four__cards" value="4" name="cards" />4
-
-            </label>
-        </div>
-        <div>
-            <label for="six__cards" class="six__cards">
-                <input type="radio" class="input" id="six__cards" value="6" name="cards" />6
-            </label>
-        </div>
-        <div>
-            <label for="eight__cards" class="eight__cards">
-                <input type="radio" class="input" id="eight__cards" value="8" name="cards" />8
-            </label>
-        </div>
-        <button class="btn">Comenzar</button>
+  <main class="main__page">
+    <form action="" class="main__form">
+      <div>
+          <label for="four_cards" class="four_cards">
+            <input class="input" 
+            id="four_cards" 
+            type="radio" 
+            value="4" 
+            name="cards" checked/>4
+          </label>
+      </div>
+      <div>
+          <label for="six_cards" class="six_cards">
+            <input class="input" 
+            id="six_cards" 
+            type="radio" 
+            value="6" 
+            name="cards"/>6
+          </label>
+      </div>
+      <div>
+          <label for="eight_cards" class="eight_cards">
+            <input class="input" 
+            id="eight_cards" 
+            type="radio" 
+            value="8" 
+            name="cards"/>8
+          </label>
+      </div>
+      <button class="btn" type="button">Comenzar</button>
     </form>
-
-</main>
+    <section class="main__results">
+      <ul class="cards"></ul>
+    </section>
+  </main>
+  
