--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -6,7 +6,7 @@
             id="four_cards" 
             type="radio" 
             value="4" 
-            name="cards" checked/>4
+            name="cards" />4
           </label>
       </div>
       <div>
